@@ -13,26 +13,16 @@
    <string>Avogadro</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="avogadro.qrc" >
-    <normaloff>:/icons/avogadro.png</normaloff>:/icons/avogadro.png</iconset>
-  </property>
-  <widget class="QWidget" name="centralWidget" >
-   <property name="geometry" >
-    <rect>
-     <x>79</x>
-     <y>56</y>
-     <width>276</width>
-     <height>474</height>
-    </rect>
+   <iconset resource="avogadro.qrc" >:/icons/avogadro.png</iconset>
    </property>
-  </widget>
+  <widget class="QWidget" name="centralWidget" />
   <widget class="QMenuBar" name="menubar" >
    <property name="geometry" >
     <rect>
      <x>0</x>
      <y>0</y>
      <width>621</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp" >
@@ -145,25 +135,8 @@
    <addaction name="menuSettings" />
    <addaction name="menuHelp" />
   </widget>
-  <widget class="QStatusBar" name="statusbar" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>530</y>
-     <width>621</width>
-     <height>23</height>
-    </rect>
-   </property>
-  </widget>
+  <widget class="QStatusBar" name="statusbar" />
   <widget class="QToolBar" name="fileToolBar" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>26</y>
-     <width>621</width>
-     <height>30</height>
-    </rect>
-   </property>
    <property name="windowTitle" >
     <string>Main Toolbar</string>
    </property>
@@ -186,14 +159,6 @@
    <addaction name="actionQuitTool" />
   </widget>
   <widget class="QDockWidget" name="projectDock" >
-   <property name="geometry" >
-    <rect>
-     <x>361</x>
-     <y>56</y>
-     <width>260</width>
-     <height>474</height>
-    </rect>
-   </property>
    <property name="minimumSize" >
     <size>
      <width>165</width>
@@ -201,7 +166,7 @@
     </size>
    </property>
    <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle" >
     <string>Project</string>
@@ -210,14 +175,6 @@
     <number>2</number>
    </attribute>
    <widget class="QWidget" name="projectWidget" >
-    <property name="geometry" >
-     <rect>
-      <x>2</x>
-      <y>24</y>
-      <width>256</width>
-      <height>448</height>
-     </rect>
-    </property>
     <layout class="QVBoxLayout" >
      <property name="spacing" >
       <number>6</number>
@@ -248,16 +205,8 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="toolsDock" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>56</y>
-     <width>73</width>
-     <height>115</height>
-    </rect>
-   </property>
    <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle" >
     <string>Tools</string>
@@ -265,28 +214,11 @@
    <attribute name="dockWidgetArea" >
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="toolsWidget" >
-    <property name="geometry" >
-     <rect>
-      <x>2</x>
-      <y>24</y>
-      <width>69</width>
-      <height>89</height>
-     </rect>
-    </property>
-   </widget>
+   <widget class="QWidget" name="toolsWidget" />
   </widget>
   <widget class="QDockWidget" name="enginesDock" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>177</y>
-     <width>73</width>
-     <height>112</height>
-    </rect>
-   </property>
    <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
+    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
    </property>
    <property name="windowTitle" >
     <string>Engines</string>
@@ -294,73 +226,11 @@
    <attribute name="dockWidgetArea" >
     <number>1</number>
    </attribute>
-   <widget class="QWidget" name="enginesWidget" >
-    <property name="geometry" >
-     <rect>
-      <x>2</x>
-      <y>24</y>
-      <width>69</width>
-      <height>86</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="engineConfigurationDock" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>295</y>
-     <width>73</width>
-     <height>114</height>
-    </rect>
-   </property>
-   <property name="windowTitle" >
-    <string>Configuration</string>
-   </property>
-   <attribute name="dockWidgetArea" >
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="engineConfigurationWidget" >
-    <property name="geometry" >
-     <rect>
-      <x>2</x>
-      <y>24</y>
-      <width>69</width>
-      <height>88</height>
-     </rect>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="enginePrimitivesDock" >
-   <property name="geometry" >
-    <rect>
-     <x>0</x>
-     <y>415</y>
-     <width>73</width>
-     <height>115</height>
-    </rect>
-   </property>
-   <property name="windowTitle" >
-    <string>Primitives</string>
-   </property>
-   <attribute name="dockWidgetArea" >
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="enginePrimitivesWidget" >
-    <property name="geometry" >
-     <rect>
-      <x>2</x>
-      <y>24</y>
-      <width>69</width>
-      <height>89</height>
-     </rect>
-    </property>
-   </widget>
+   <widget class="QWidget" name="enginesWidget" />
   </widget>
   <action name="actionOpen" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/fileopen.png</normaloff>:/icons/fileopen.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/fileopen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Open</string>
@@ -371,8 +241,7 @@
   </action>
   <action name="actionOpenTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/fileopen.png</normaloff>:/icons/fileopen.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/fileopen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Open</string>
@@ -380,8 +249,7 @@
   </action>
   <action name="actionQuit" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/exit.png</normaloff>:/icons/exit.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/exit.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Quit</string>
@@ -392,8 +260,7 @@
   </action>
   <action name="actionQuitTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/exit.png</normaloff>:/icons/exit.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/exit.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Quit</string>
@@ -411,8 +278,7 @@
   </action>
   <action name="actionNew" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/filenew.png</normaloff>:/icons/filenew.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/filenew.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;New</string>
@@ -423,8 +289,7 @@
   </action>
   <action name="actionNewTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/filenew.png</normaloff>:/icons/filenew.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/filenew.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;New</string>
@@ -432,8 +297,7 @@
   </action>
   <action name="actionClose" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/fileclose.png</normaloff>:/icons/fileclose.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/fileclose.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Close</string>
@@ -444,8 +308,7 @@
   </action>
   <action name="actionCloseTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/fileclose.png</normaloff>:/icons/fileclose.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/fileclose.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Close</string>
@@ -453,8 +316,7 @@
   </action>
   <action name="actionSave" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/filesave.png</normaloff>:/icons/filesave.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/filesave.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Save</string>
@@ -465,8 +327,7 @@
   </action>
   <action name="actionSaveTool" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/filesave.png</normaloff>:/icons/filesave.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/filesave.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Save</string>
@@ -474,8 +335,7 @@
   </action>
   <action name="actionSaveAs" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/filesaveas.png</normaloff>:/icons/filesaveas.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/filesaveas.png</iconset>
    </property>
    <property name="text" >
     <string>Save &amp;As...</string>
@@ -486,8 +346,7 @@
   </action>
   <action name="actionRevert" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/revert.png</normaloff>:/icons/revert.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/revert.png</iconset>
    </property>
    <property name="text" >
     <string>Revert To Saved</string>
@@ -495,8 +354,7 @@
   </action>
   <action name="actionExportGraphics" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/fileexport.png</normaloff>:/icons/fileexport.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/fileexport.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Export Graphics</string>
@@ -504,8 +362,7 @@
   </action>
   <action name="actionFullScreen" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/window_fullscreen.png</normaloff>:/icons/window_fullscreen.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/window_fullscreen.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Full Screen Mode</string>
@@ -513,8 +370,7 @@
   </action>
   <action name="actionSetBackgroundColor" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/colorize.png</normaloff>:/icons/colorize.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/colorize.png</iconset>
    </property>
    <property name="text" >
     <string>Set &amp;Background Color...</string>
@@ -527,8 +383,7 @@
   </action>
   <action name="actionUndo" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/undo.png</normaloff>:/icons/undo.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/undo.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Undo</string>
@@ -539,8 +394,7 @@
   </action>
   <action name="actionRedo" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/redo.png</normaloff>:/icons/redo.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/redo.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Redo</string>
@@ -551,8 +405,7 @@
   </action>
   <action name="actionNewView" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/tab_new.png</normaloff>:/icons/tab_new.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/tab_new.png</iconset>
    </property>
    <property name="text" >
     <string>New View</string>
@@ -563,8 +416,7 @@
     <bool>false</bool>
    </property>
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/tab_remove.png</normaloff>:/icons/tab_remove.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/tab_remove.png</iconset>
    </property>
    <property name="text" >
     <string>Close View</string>
@@ -572,8 +424,7 @@
   </action>
   <action name="actionCenter" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/navigate.png</normaloff>:/icons/navigate.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/navigate.png</iconset>
    </property>
    <property name="text" >
     <string>Center</string>
@@ -581,8 +432,7 @@
   </action>
   <action name="actionPaste" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/paste.png</normaloff>:/icons/paste.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/paste.png</iconset>
    </property>
    <property name="text" >
     <string>&amp;Paste</string>
@@ -593,8 +443,7 @@
   </action>
   <action name="actionCopy" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/copy.png</normaloff>:/icons/copy.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/copy.png</iconset>
    </property>
    <property name="text" >
     <string>Copy</string>
@@ -605,8 +454,7 @@
   </action>
   <action name="actionCut" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/cut.png</normaloff>:/icons/cut.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/cut.png</iconset>
    </property>
    <property name="text" >
     <string>Cut</string>
@@ -641,8 +489,7 @@
   </action>
   <action name="configureAvogadroAction" >
    <property name="icon" >
-    <iconset resource="avogadro.qrc" >
-     <normaloff>:/icons/tool.png</normaloff>:/icons/tool.png</iconset>
+    <iconset resource="avogadro.qrc" >:/icons/tool.png</iconset>
    </property>
    <property name="text" >
     <string>Configure Avogadro...</string>
